# godot_test_video_stream

./: .gitignore  README.md
error_logs/: error_report_mac.txt  error_with_experimental_threads.txt  error_without_experimental_threads.txt
godot/: godot_run.ps1  godot_run.sh  icon.svg.import  node_2d.tscn  project.godot
godot/addons/test_video/: test_video.gdextension
rust/: Cargo.toml  build_mac.sh  build_win.ps1
rust/src/: lib.rs
