[package]
name = "godot_test_video_stream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features=["experimental-threads"] }
# godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }